--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Create release.
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "resume.pdf"
+        artifacts: ".build/resume.pdf"
         tag: ${{ env.GITHUB_SHA }}
         token: ${{ secrets.GITHUB_TOKEN }}
       
