--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Install dependencies.
-      run: sudo apt install -y -q texlive-full
+      run: sudo apt update && sudo apt upgrade -y -q && sudo apt install -y -q texlive-full
       
     - name: Build resume.
       run: make
